--- a/01ExpandingCards/index.html
+++ b/01ExpandingCards/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding Cards</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="panel active" style="background-image:url('./images/tanya-dusett-KwJewnpUT6I-unsplash.jpg')"><h3>picture1</h3></div>
+        <div class="panel" style="background-image:url('./images/jeremy-bishop-EwKXn5CapA4-unsplash.jpg')"><h3>picture2</h3></div>
+        <div class="panel" style="background-image:url('./images/navi-HeoATyJ1DFQ-unsplash.jpg')"><h3>picture3</h3></div>
+        <div class="panel" style="background-image:url('./images/raimond-klavins-KvVCDvD1_t0-unsplash.jpg')"><h3>picture4</h3></div>
+        <div class="panel" style="background-image:url('./images/stephanie-fuchs-m_8o12KdLfg-unsplash.jpg')"><h3>picture5</h3></div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
