--- a/03RotatingNavgation/index.html
+++ b/03RotatingNavgation/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Rotating Navigation</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="circle-container">
+            <div class="circle">
+                <button id="close">
+                    <i class="fas fa-times"></i>         
+                </button>
+                <button id="open">
+                    <i class="fas fa-bars"></i> 
+                </button>
+            </div>
+        </div>
+        <div class="content">
+            <h1>Anyting Title</h1>
+            <small>offer name</small>
+            <p>Anyting you want</p>
+            <h3>picture name</h3>
+            <img src="./images/cristina-anne-costello-NDprz_Y90UM-unsplash.jpg" alt="picture">
+            <p>Anyting you want</p>
+        </div>
+    </div>
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i> Home</li>
+            <li><i class="fas fa-user-alt"></i> About</li>
+            <li><i class="fas fa-envelope"></i> Contact</li>
+        </ul>
+    </nav>
+    <script src="./script.js"></script>
 </body>
 </html>
